<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    >


    <Button
        android:id="@+id/database"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/showDatabase"
        android:onClick="goToDatabase"
        />

    <Button
        android:id="@+id/startQuiz"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/startQuiz"
        android:onClick="startQuiz"
        />

    <Button
        android:id="@+id/addToDatabase"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/addToDatabase"
        android:onClick="addToDatabase"
         />
    </LinearLayout>