<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    tools:context=".startQuizActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="Guess image"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textScore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/score"
            android:textAlignment="textEnd"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textView_score"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:layout_gravity="start"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textAttempts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/attempts"
            android:textAlignment="textEnd"
            android:textAllCaps="true" />

    <TextView
        android:id="@+id/textView_attempts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAlignment="textStart"
        android:layout_gravity="start"
         />
</LinearLayout>

    <EditText
        android:id="@+id/editText_guess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/guess_who"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/guess_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="guess"
        android:text="@string/guess" />

</LinearLayout>